# open-claude-pilot

./: CONTRIBUTING.md  LICENSE  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  README.md  setup.ps1  setup.sh
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_websocket_error.py
backend/app/: __init__.py  main.py
backend/app/api/routes/: chat.py  files.py  projects.py  sandbox.py
backend/app/api/websocket/: __init__.py  chat_handler.py  streaming_manager.py  task_registry.py
backend/app/core/: __init__.py  config.py
backend/app/core/agent/: executor.py  templates.py
backend/app/core/llm/: __init__.py  provider.py
backend/app/core/sandbox/: __init__.py  container.py  manager.py  security.py
backend/app/core/storage/: __init__.py  database.py  file_manager.py  project_volume_storage.py  volume_storage.py
backend/app/models/database/: __init__.py  agent_action.py  agent_config.py  chat_session.py  file.py  message.py  project.py
backend/app/models/schemas/: __init__.py  agent.py  chat.py  file.py  message.py  project.py
backend/tests/: README_INCREMENTAL_SAVING_TESTS.md  __init__.py  conftest.py
backend/tests/core/: test_config.py
backend/tests/integration/: __init__.py  conftest.py  test_chat_flow.py  test_files_flow.py  test_incremental_message_saving.py  test_project_lifecycle.py  test_sandbox_flow.py  test_settings_flow.py
backend/tests/services/: test_event_bus.py  test_message_orchestrator.py
backend/tests/unit/: test_action_streaming_events.py  test_file_write_workspace.py  test_task_registry.py
(+122 files in other folders)
